简化了关于和设置界面的代码

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -40,7 +40,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
+    <fragment
+        android:name="com.hut.zero.other_pages.SettingsPreferenceFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/settings_container"
