--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -40,7 +40,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
+    <fragment
+        android:name="com.hut.zero.other_pages.AboutPreferenceFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/about_container"
