改善逻辑：在看详细内容时，先从本地获取，如果本地还没有缓存再从网络获取详细内容，从网络获取到内容后会同时缓存到本地

--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -17,12 +17,16 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/refreshLayout">
+        android:layout_height="match_parent">
 
-        <!--<FrameLayout-->
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/refreshLayout">
+
+            <!--<FrameLayout-->
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="wrap_content"-->
             <!--android:focusable="true"-->
@@ -35,8 +39,10 @@
                 android:scrollbars="vertical"
                 android:scrollbarFadeDuration="1"
                 android:fadeScrollbars="true" />
-        <!--</FrameLayout>-->
+            <!--</FrameLayout>-->
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+        </android.support.v4.widget.SwipeRefreshLayout>
+    </android.support.design.widget.CoordinatorLayout>
+
 </layout>
 
